fix dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,8 +5,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    @apply bg-white dark:bg-gray-900
+}
+
 a {
-    @apply text-blue-600 hover:text-blue-800
+    @apply text-blue-600 hover:text-blue-800 dark:text-blue-300 dark:hover:text-blue-500
 }
 
 h1 {
@@ -21,12 +25,16 @@ h3 {
     @apply text-xl font-extrabold dark:text-white mt-5 mb-2
 }
 
+h4 {
+    @apply text-lg font-extrabold dark:text-white mt-5 mb-2
+}
+
 p {
-    @apply font-light pb-5
+    @apply font-light pb-5 dark:text-white
 }
 
 ul {
-    @apply list-disc mb-4
+    @apply list-disc mb-4 dark:text-white
 }
 
 li {
